// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WithFiltersHOC> when rendered should render properly 1`] = `
<div
  className="talixo-filtered-chart talixo-filtered-chart--top"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Legend
    className="talixo-filtered-chart__legend"
    dataItems={
      Array [
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 5,
            },
            Object {
              "x": 1496008800000,
              "y": 2,
            },
            Object {
              "x": 1496181600000,
              "y": 2,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 0,
          "title": "Line 1",
        },
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 3,
            },
            Object {
              "x": 1496008800000,
              "y": 8,
            },
            Object {
              "x": 1496181600000,
              "y": 1,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 1,
          "title": "Line 2",
        },
      ]
    }
    direction="horizontal"
    onClick={[Function]}
  />
  <div
    className="talixo-filtered-chart__chart"
    style={
      Object {
        "height": "80%",
        "width": "100%",
      }
    }
  >
    <TestComponent
      data={
        Array [
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 5,
              },
              Object {
                "x": 1496008800000,
                "y": 2,
              },
              Object {
                "x": 1496181600000,
                "y": 2,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 0,
            "title": "Line 1",
          },
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 3,
              },
              Object {
                "x": 1496008800000,
                "y": 8,
              },
              Object {
                "x": 1496181600000,
                "y": 1,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 1,
            "title": "Line 2",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`<WithFiltersHOC> when rendered should render properly with legend at the bottom 1`] = `
<div
  className="talixo-filtered-chart talixo-filtered-chart--bottom"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Legend
    className="talixo-filtered-chart__legend"
    dataItems={
      Array [
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 5,
            },
            Object {
              "x": 1496008800000,
              "y": 2,
            },
            Object {
              "x": 1496181600000,
              "y": 2,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 0,
          "title": "Line 1",
        },
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 3,
            },
            Object {
              "x": 1496008800000,
              "y": 8,
            },
            Object {
              "x": 1496181600000,
              "y": 1,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 1,
          "title": "Line 2",
        },
      ]
    }
    direction="horizontal"
    onClick={[Function]}
  />
  <div
    className="talixo-filtered-chart__chart"
    style={
      Object {
        "height": "80%",
        "width": "100%",
      }
    }
  >
    <TestComponent
      data={
        Array [
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 5,
              },
              Object {
                "x": 1496008800000,
                "y": 2,
              },
              Object {
                "x": 1496181600000,
                "y": 2,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 0,
            "title": "Line 1",
          },
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 3,
              },
              Object {
                "x": 1496008800000,
                "y": 8,
              },
              Object {
                "x": 1496181600000,
                "y": 1,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 1,
            "title": "Line 2",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`<WithFiltersHOC> when rendered should render properly with legend at the left side 1`] = `
<div
  className="talixo-filtered-chart talixo-filtered-chart--left"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Legend
    className="talixo-filtered-chart__legend"
    dataItems={
      Array [
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 5,
            },
            Object {
              "x": 1496008800000,
              "y": 2,
            },
            Object {
              "x": 1496181600000,
              "y": 2,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 0,
          "title": "Line 1",
        },
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 3,
            },
            Object {
              "x": 1496008800000,
              "y": 8,
            },
            Object {
              "x": 1496181600000,
              "y": 1,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 1,
          "title": "Line 2",
        },
      ]
    }
    direction="vertical"
    onClick={[Function]}
  />
  <div
    className="talixo-filtered-chart__chart"
    style={
      Object {
        "height": "100%",
        "width": "85%",
      }
    }
  >
    <TestComponent
      data={
        Array [
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 5,
              },
              Object {
                "x": 1496008800000,
                "y": 2,
              },
              Object {
                "x": 1496181600000,
                "y": 2,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 0,
            "title": "Line 1",
          },
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 3,
              },
              Object {
                "x": 1496008800000,
                "y": 8,
              },
              Object {
                "x": 1496181600000,
                "y": 1,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 1,
            "title": "Line 2",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`<WithFiltersHOC> when rendered should render properly with legend at the right side 1`] = `
<div
  className="talixo-filtered-chart talixo-filtered-chart--right"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Legend
    className="talixo-filtered-chart__legend"
    dataItems={
      Array [
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 5,
            },
            Object {
              "x": 1496008800000,
              "y": 2,
            },
            Object {
              "x": 1496181600000,
              "y": 2,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 0,
          "title": "Line 1",
        },
        Object {
          "className": "className",
          "color": null,
          "dataItems": Array [
            Object {
              "x": 1495490400000,
              "y": 3,
            },
            Object {
              "x": 1496008800000,
              "y": 8,
            },
            Object {
              "x": 1496181600000,
              "y": 1,
            },
            Object {
              "x": 1497304800000,
              "y": 2,
            },
          ],
          "disabled": false,
          "id": 1,
          "title": "Line 2",
        },
      ]
    }
    direction="vertical"
    onClick={[Function]}
  />
  <div
    className="talixo-filtered-chart__chart"
    style={
      Object {
        "height": "100%",
        "width": "85%",
      }
    }
  >
    <TestComponent
      data={
        Array [
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 5,
              },
              Object {
                "x": 1496008800000,
                "y": 2,
              },
              Object {
                "x": 1496181600000,
                "y": 2,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 0,
            "title": "Line 1",
          },
          Object {
            "className": "className",
            "color": null,
            "dataItems": Array [
              Object {
                "x": 1495490400000,
                "y": 3,
              },
              Object {
                "x": 1496008800000,
                "y": 8,
              },
              Object {
                "x": 1496181600000,
                "y": 1,
              },
              Object {
                "x": 1497304800000,
                "y": 2,
              },
            ],
            "disabled": false,
            "id": 1,
            "title": "Line 2",
          },
        ]
      }
    />
  </div>
</div>
`;
